--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat App</title>
+    <title>NexChat</title>
   </head>
   <body>
-    <div id="root" class="w-full flex justify-center"></div>
+    <div id="root" class="w-full flex justify-center flex-wrap max-w-[2560px] h-screen m-auto shadow-lg"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
